added crud view

--- a/src/gui/css/encheres.css
+++ b/src/gui/css/encheres.css
@@ -7,7 +7,7 @@
 
 .main
 {
-        -fx-background-color: black;
+        -fx-background-color: white;
         -fx-background-image:url("/utils/assets/menu2.png");
 }
 
