--- a/src/gui/AjouterEnchers.fxml
+++ b/src/gui/AjouterEnchers.fxml
@@ -2,7 +2,12 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -121,7 +126,43 @@
                   <FontAwesomeIconView fx:id="gererenchersicon" glyphStyle="-fx-fill:#4f86dd" onMouseClicked="#MenuEspace" size="60" />
                </children>
             </VBox>
-            <Pane prefHeight="524.0" prefWidth="959.0" />
+            <Pane prefHeight="524.0" prefWidth="959.0">
+               <children>
+                  <TableView layoutX="402.0" layoutY="30.0" prefHeight="213.0" prefWidth="521.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="C1" />
+                      <TableColumn prefWidth="75.0" text="C2" />
+                    </columns>
+                  </TableView>
+                  <TextField layoutX="405.0" layoutY="272.0" prefHeight="37.0" prefWidth="518.0" />
+                  <Label layoutX="209.0" layoutY="268.0" prefHeight="37.0" prefWidth="137.0" text="Seuil Mise">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Label>
+                  <DatePicker layoutX="407.0" layoutY="327.0" prefHeight="37.0" prefWidth="515.0" />
+                  <Label layoutX="211.0" layoutY="326.0" prefHeight="37.0" prefWidth="137.0" text="Date Mise">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="211.0" layoutY="380.0" prefHeight="37.0" prefWidth="152.0" text="Heures mise">
+                     <font>
+                        <Font size="25.0" />
+                     </font>
+                  </Label>
+                  <DatePicker layoutX="407.0" layoutY="382.0" prefHeight="37.0" prefWidth="518.0" />
+                  <Label layoutX="109.0" layoutY="35.0" prefHeight="35.0" prefWidth="256.0" text="Selectionner un produit">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="820.0" layoutY="446.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="103.0" text="Ajouter">
+                     <font>
+                        <Font size="21.0" />
+                     </font>
+                  </Button>
+               </children></Pane>
          </children>
       </HBox>
    </children>
