--- a/src/gui/EnchereAdmin.fxml
+++ b/src/gui/EnchereAdmin.fxml
@@ -2,8 +2,9 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -183,7 +184,12 @@
             </Pane>
             <Pane prefHeight="508.0" prefWidth="869.0">
                <children>
-                  <Button layoutX="125.0" layoutY="112.0" mnemonicParsing="false" prefHeight="151.0" prefWidth="275.0" text="Enchere" />
+                  <TableView layoutX="74.0" layoutY="49.0" prefHeight="370.0" prefWidth="723.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="C1" />
+                      <TableColumn prefWidth="75.0" text="C2" />
+                    </columns>
+                  </TableView>
                </children>
             </Pane>
          </children>
