--- a/src/gui/AjouterEnchers.fxml
+++ b/src/gui/AjouterEnchers.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXTimePicker?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -128,40 +129,44 @@
             </VBox>
             <Pane prefHeight="524.0" prefWidth="959.0">
                <children>
-                  <TableView layoutX="402.0" layoutY="30.0" prefHeight="213.0" prefWidth="521.0">
+                  <TableView fx:id="table" layoutX="322.0" layoutY="30.0" onMouseClicked="#AjoutStep1" prefHeight="213.0" prefWidth="601.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
+                      <TableColumn fx:id="image" prefWidth="152.00003051757812" text="image" />
+                      <TableColumn fx:id="label" prefWidth="97.99996948242188" text="label" />
+                        <TableColumn fx:id="categorie" prefWidth="100.66668701171875" text="categorie" />
+                        <TableColumn fx:id="prix" prefWidth="102.6666259765625" text="prix" />
+                        <TableColumn fx:id="id" prefWidth="75.3333740234375" text="id" />
+                        <TableColumn fx:id="prop" prefWidth="76.0" text="prop" />
                     </columns>
                   </TableView>
-                  <TextField layoutX="405.0" layoutY="272.0" prefHeight="37.0" prefWidth="518.0" />
-                  <Label layoutX="209.0" layoutY="268.0" prefHeight="37.0" prefWidth="137.0" text="Seuil Mise">
+                  <TextField fx:id="tfmise" layoutX="322.0" layoutY="272.0" prefHeight="37.0" prefWidth="601.0" />
+                  <Label layoutX="35.0" layoutY="272.0" prefHeight="37.0" prefWidth="137.0" text="Seuil Mise">
                      <font>
                         <Font size="25.0" />
                      </font>
                   </Label>
-                  <DatePicker layoutX="407.0" layoutY="327.0" prefHeight="37.0" prefWidth="515.0" />
-                  <Label layoutX="211.0" layoutY="326.0" prefHeight="37.0" prefWidth="137.0" text="Date Mise">
+                  <Label layoutX="32.0" layoutY="330.0" prefHeight="37.0" prefWidth="137.0" text="Date Mise">
                      <font>
                         <Font size="25.0" />
                      </font>
                   </Label>
-                  <Label layoutX="211.0" layoutY="380.0" prefHeight="37.0" prefWidth="152.0" text="Heures mise">
+                  <Label layoutX="32.0" layoutY="380.0" prefHeight="37.0" prefWidth="152.0" text="Heures mise">
                      <font>
                         <Font size="25.0" />
                      </font>
                   </Label>
-                  <DatePicker layoutX="407.0" layoutY="382.0" prefHeight="37.0" prefWidth="518.0" />
-                  <Label layoutX="109.0" layoutY="35.0" prefHeight="35.0" prefWidth="256.0" text="Selectionner un produit">
+                  <Label layoutX="26.0" layoutY="26.0" prefHeight="35.0" prefWidth="256.0" text="Selectionner un produit">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Button layoutX="820.0" layoutY="446.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="103.0" text="Ajouter">
+                  <Button fx:id="Ajout" layoutX="679.0" layoutY="446.0" mnemonicParsing="false" onMouseClicked="#AjoutFinalStep" prefHeight="52.0" prefWidth="244.0" text="Ajouter">
                      <font>
                         <Font size="21.0" />
                      </font>
                   </Button>
+                  <JFXDatePicker fx:id="date" defaultColor="#f76700" layoutX="322.0" layoutY="332.0" prefHeight="25.0" prefWidth="601.0" />
+                  <JFXTimePicker fx:id="heure" defaultColor="#2f7df5" layoutX="322.0" layoutY="386.0" prefHeight="25.0" prefWidth="601.0" />
                </children></Pane>
          </children>
       </HBox>
