--- a/src/gui/GererEnchers.fxml
+++ b/src/gui/GererEnchers.fxml
@@ -2,6 +2,7 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -125,14 +126,16 @@
             </VBox>
             <Pane prefHeight="524.0" prefWidth="959.0">
                <children>
-                  <TableView fx:id="table" editable="true" layoutX="68.0" layoutY="37.0" prefHeight="447.0" prefWidth="810.0">
+                  <TableView fx:id="table" editable="true" layoutX="67.0" layoutY="27.0" prefHeight="373.0" prefWidth="810.0">
                      <columns>
                         <TableColumn fx:id="id" prefWidth="75.0" text="id" />
                         <TableColumn fx:id="idcible" onEditCommit="#update" prefWidth="89.0" text="id cible" />
                         <TableColumn fx:id="idprop" prefWidth="88.0" text="id prop" />
                         <TableColumn fx:id="seuil" prefWidth="125.0" text="seuil" />
                         <TableColumn fx:id="date" prefWidth="182.0" text="date" />
+                        <TableColumn fx:id="delete" prefWidth="182.0" text="Delete" />
                      </columns></TableView>
+                  <Button layoutX="744.0" layoutY="435.0" mnemonicParsing="false" onMouseClicked="#delete" prefHeight="61.0" prefWidth="133.0" text="DELETE" />
                </children></Pane>
          </children>
       </HBox>
