--- a/src/gui/EnchereAdmin.fxml
+++ b/src/gui/EnchereAdmin.fxml
@@ -2,6 +2,7 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -184,10 +185,12 @@
             </Pane>
             <Pane prefHeight="508.0" prefWidth="869.0">
                <children>
-                  <TableView layoutX="74.0" layoutY="49.0" prefHeight="370.0" prefWidth="723.0">
+                  <TableView fx:id="table" layoutX="74.0" layoutY="49.0" onMouseClicked="#HistoriqueSession" prefHeight="370.0" prefWidth="723.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
+                      <TableColumn fx:id="id" prefWidth="146.0" text="id" />
+                      <TableColumn fx:id="mise" prefWidth="165.0" text="derniere_mise" />
+                        <TableColumn fx:id="gagnant" prefWidth="202.0" text="id_gagnant" />
+                        <TableColumn fx:id="etat" prefWidth="209.0" text="etat" />
                     </columns>
                   </TableView>
                </children>
