--- a/src/gui/EnchereAdmin.fxml
+++ b/src/gui/EnchereAdmin.fxml
@@ -183,16 +183,18 @@
                   <FontAwesomeIconView glyphName="GEAR" glyphStyle="-fx-fill:#7c8184" layoutX="839.0" layoutY="46.0" size="1.5em" />
                </children>
             </Pane>
-            <Pane prefHeight="508.0" prefWidth="869.0">
+            <Pane fx:id="tablePane" prefHeight="508.0" prefWidth="869.0">
                <children>
-                  <TableView fx:id="table" layoutX="74.0" layoutY="49.0" onMouseClicked="#HistoriqueSession" prefHeight="370.0" prefWidth="723.0">
+                  <TableView fx:id="table" layoutX="74.0" layoutY="26.0" onMouseClicked="#HistoriqueSession" prefHeight="370.0" prefWidth="723.0">
                     <columns>
+                        <TableColumn fx:id="action" prefWidth="67.0" text="action" />
                       <TableColumn fx:id="id" prefWidth="146.0" text="id" />
-                      <TableColumn fx:id="mise" prefWidth="165.0" text="derniere_mise" />
-                        <TableColumn fx:id="gagnant" prefWidth="202.0" text="id_gagnant" />
-                        <TableColumn fx:id="etat" prefWidth="209.0" text="etat" />
+                      <TableColumn fx:id="mise" prefWidth="169.0" text="derniere_mise" />
+                        <TableColumn fx:id="gagnant" prefWidth="196.0" text="id_gagnant" />
+                        <TableColumn fx:id="etat" prefWidth="144.0" text="etat" />
                     </columns>
                   </TableView>
+                  <Button fx:id="delete" layoutX="642.0" layoutY="427.0" mnemonicParsing="false" onMouseClicked="#DeleteSessions" prefHeight="38.0" prefWidth="158.0" text="Delete Session" />
                </children>
             </Pane>
          </children>
