--- a/src/gui/Encheres.fxml
+++ b/src/gui/Encheres.fxml
@@ -7,11 +7,7 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -114,26 +110,7 @@
       </HBox>
       <HBox prefHeight="529.0" prefWidth="1025.0">
          <children>
-            <ScrollPane prefHeight="524.0" prefWidth="788.0">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1000.0" prefWidth="770.0">
-                     <children>
-                        <GridPane prefHeight="554.0" prefWidth="769.0">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints maxHeight="205.6666717529297" minHeight="10.0" prefHeight="205.6666717529297" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="184.33331298828125" minHeight="10.0" prefHeight="184.33331298828125" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="97.33334350585938" minHeight="10.0" prefHeight="62.66668701171875" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                        </GridPane>
-                     </children>
-                  </AnchorPane>
-              </content>
-            </ScrollPane>
+            <ScrollPane fx:id="anchorGridPane" onScroll="#ChargerPage" prefHeight="524.0" prefWidth="788.0" />
             <VBox prefHeight="524.0" prefWidth="240.0">
                <opaqueInsets>
                   <Insets />
