--- a/src/gui/Store.fxml
+++ b/src/gui/Store.fxml
@@ -6,8 +6,8 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -74,10 +74,10 @@
             </Label>
             <Label fx:id="espace" onMouseClicked="#Menu" prefHeight="43.0" prefWidth="120.0" styleClass="menu_item" text="Espace" textFill="#837f7f">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font size="22.0" />
                </font>
                <padding>
-                  <Insets bottom="11.0" left="23.0" top="11.0" />
+                  <Insets bottom="11.0" left="8.0" top="11.0" />
                </padding>
             </Label>
             <Label text="10£" textFill="WHITE">
@@ -108,45 +108,26 @@
             </ImageView>
          </children>
       </HBox>
-      <HBox prefHeight="529.0" prefWidth="1025.0">
+      <AnchorPane fx:id="PageAnchor" prefHeight="524.0" prefWidth="1025.0">
          <children>
-            <Pane prefHeight="524.0" prefWidth="788.0">
-               <children>
-                  <Label layoutX="129.0" layoutY="146.0" text="PUT CONTENT HERE !!">
-                     <font>
-                        <Font size="59.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="121.0" layoutY="232.0" text="ON AFFICHE ICI LES PRODUITS EN STORE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <VBox prefHeight="524.0" prefWidth="240.0">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <children>
-                  <Label style="-fx-background-color: blue;" text="Label">
-                     <font>
-                        <Font size="62.0" />
-                     </font>
-                  </Label>
-                  <Label style="-fx-background-color: blue;" text="Label">
-                     <font>
-                        <Font size="62.0" />
-                     </font>
-                  </Label>
-                  <Label style="-fx-background-color: blue;" text="Label">
-                     <font>
-                        <Font size="62.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-         </children>
-      </HBox>
+            <Label fx:id="label12" layoutX="833.0" layoutY="406.0" prefHeight="18.0" prefWidth="54.0" />
+            <Label fx:id="label10" layoutX="130.0" layoutY="406.0" prefHeight="18.0" prefWidth="61.0" />
+            <Label fx:id="label11" layoutX="482.0" layoutY="406.0" prefHeight="18.0" prefWidth="54.0" />
+            <Label fx:id="label1" layoutX="136.0" layoutY="133.0" prefHeight="18.0" prefWidth="49.0" />
+            <Label fx:id="label2" layoutX="486.0" layoutY="133.0" prefHeight="18.0" prefWidth="54.0" />
+            <Label fx:id="label3" layoutX="835.0" layoutY="133.0" prefHeight="18.0" prefWidth="61.0" />
+            <Label fx:id="label4" layoutX="130.0" layoutY="388.0" prefHeight="18.0" prefWidth="61.0" />
+            <Label fx:id="label5" layoutX="482.0" layoutY="388.0" prefHeight="18.0" prefWidth="61.0" />
+            <Label fx:id="label6" layoutX="835.0" layoutY="388.0" prefHeight="18.0" prefWidth="61.0" />
+            <ImageView fx:id="image1" fitHeight="98.0" fitWidth="200.0" layoutX="60.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="image4" fitHeight="98.0" fitWidth="200.0" layoutX="60.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="image5" fitHeight="98.0" fitWidth="200.0" layoutX="413.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="image2" fitHeight="98.0" fitWidth="200.0" layoutX="413.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="image3" fitHeight="98.0" fitWidth="200.0" layoutX="763.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="image6" fitHeight="98.0" fitWidth="200.0" layoutX="760.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="label9" layoutX="836.0" layoutY="151.0" prefHeight="18.0" prefWidth="54.0" />
+            <Label fx:id="label8" layoutX="488.0" layoutY="151.0" prefHeight="18.0" prefWidth="49.0" />
+            <Label fx:id="label7" layoutX="136.0" layoutY="151.0" prefHeight="18.0" prefWidth="49.0" />
+         </children></AnchorPane>
    </children>
 </VBox>
