all crud are updated ang integrated in gui + api countdown

--- a/src/gui/GererEnchers.fxml
+++ b/src/gui/GererEnchers.fxml
@@ -126,17 +126,18 @@
             </VBox>
             <Pane prefHeight="524.0" prefWidth="959.0">
                <children>
-                  <TableView fx:id="table" editable="true" layoutX="43.0" layoutY="27.0" prefHeight="373.0" prefWidth="868.0">
+                  <TableView fx:id="table" editable="true" layoutX="43.0" layoutY="27.0" prefHeight="373.0" prefWidth="868.0" styleClass="tree-table-view">
                      <columns>
                         <TableColumn fx:id="delete" prefWidth="52.0" text="Select" />
                         <TableColumn fx:id="image" prefWidth="171.66665649414062" text="image" />
                         <TableColumn fx:id="label" prefWidth="148.66665649414062" text="label" />
                         <TableColumn fx:id="categorie" prefWidth="142.0" text="categorie" />
                         <TableColumn fx:id="seuil" onEditCommit="#UpdateMise" prefWidth="129.0" text="seuil mise" />
-                        <TableColumn fx:id="date" prefWidth="114.0" text="date" />
-                        <TableColumn fx:id="heure" onEditCommit="#UpdateTime" prefWidth="106.0" text="heure" />
+                        <TableColumn fx:id="date" prefWidth="108.0" text="date" />
+                        <TableColumn fx:id="heure" prefWidth="105.0" text="heure" />
                      </columns></TableView>
                   <Button layoutX="744.0" layoutY="435.0" mnemonicParsing="false" onMouseClicked="#delete" prefHeight="61.0" prefWidth="166.0" text="DELETE" />
+                  <Button layoutX="521.0" layoutY="435.0" mnemonicParsing="false" onMouseClicked="#Update" prefHeight="61.0" prefWidth="166.0" text="Update Date" />
                </children></Pane>
          </children>
       </HBox>
