--- a/src/gui/Store.fxml
+++ b/src/gui/Store.fxml
@@ -2,12 +2,14 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -110,24 +112,54 @@
       </HBox>
       <AnchorPane fx:id="PageAnchor" prefHeight="524.0" prefWidth="1025.0">
          <children>
-            <Label fx:id="label12" layoutX="833.0" layoutY="406.0" prefHeight="18.0" prefWidth="54.0" />
-            <Label fx:id="label10" layoutX="130.0" layoutY="406.0" prefHeight="18.0" prefWidth="61.0" />
-            <Label fx:id="label11" layoutX="482.0" layoutY="406.0" prefHeight="18.0" prefWidth="54.0" />
-            <Label fx:id="label1" layoutX="136.0" layoutY="133.0" prefHeight="18.0" prefWidth="49.0" />
-            <Label fx:id="label2" layoutX="486.0" layoutY="133.0" prefHeight="18.0" prefWidth="54.0" />
-            <Label fx:id="label3" layoutX="835.0" layoutY="133.0" prefHeight="18.0" prefWidth="61.0" />
-            <Label fx:id="label4" layoutX="130.0" layoutY="388.0" prefHeight="18.0" prefWidth="61.0" />
-            <Label fx:id="label5" layoutX="482.0" layoutY="388.0" prefHeight="18.0" prefWidth="61.0" />
-            <Label fx:id="label6" layoutX="835.0" layoutY="388.0" prefHeight="18.0" prefWidth="61.0" />
-            <ImageView fx:id="image1" fitHeight="98.0" fitWidth="200.0" layoutX="60.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="image4" fitHeight="98.0" fitWidth="200.0" layoutX="60.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="image5" fitHeight="98.0" fitWidth="200.0" layoutX="413.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="image2" fitHeight="98.0" fitWidth="200.0" layoutX="413.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="image3" fitHeight="98.0" fitWidth="200.0" layoutX="763.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="image6" fitHeight="98.0" fitWidth="200.0" layoutX="760.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="label9" layoutX="836.0" layoutY="151.0" prefHeight="18.0" prefWidth="54.0" />
-            <Label fx:id="label8" layoutX="488.0" layoutY="151.0" prefHeight="18.0" prefWidth="49.0" />
-            <Label fx:id="label7" layoutX="136.0" layoutY="151.0" prefHeight="18.0" prefWidth="49.0" />
+            <Pane fx:id="pane1" layoutX="86.0" layoutY="14.0" prefHeight="166.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="image1" fitHeight="98.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="label1" layoutX="41.0" layoutY="98.0" prefHeight="18.0" prefWidth="132.0" textAlignment="CENTER" />
+                  <Label fx:id="label7" layoutX="47.0" layoutY="126.0" prefHeight="18.0" prefWidth="120.0" textAlignment="CENTER" />
+               </children>
+            </Pane>
+            <Pane fx:id="pane4" layoutX="86.0" layoutY="254.0" prefHeight="166.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="image4" fitHeight="98.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="label4" layoutX="35.0" layoutY="98.0" prefHeight="18.0" prefWidth="132.0" />
+                  <Label fx:id="label10" layoutX="35.0" layoutY="134.0" prefHeight="18.0" prefWidth="120.0" />
+               </children>
+            </Pane>
+            <Pane fx:id="pane2" layoutX="413.0" layoutY="14.0" prefHeight="166.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="image2" fitHeight="98.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="label8" layoutX="35.0" layoutY="134.0" prefHeight="18.0" prefWidth="132.0" textAlignment="CENTER" />
+                  <Label fx:id="label2" layoutX="41.0" layoutY="98.0" prefHeight="18.0" prefWidth="120.0" textAlignment="CENTER" />
+               </children>
+            </Pane>
+            <Pane fx:id="pane5" layoutX="413.0" layoutY="254.0" prefHeight="166.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="image5" fitHeight="98.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="label11" layoutX="35.0" layoutY="134.0" prefHeight="18.0" prefWidth="132.0" />
+                  <Label fx:id="label5" layoutX="35.0" layoutY="98.0" prefHeight="18.0" prefWidth="132.0" />
+               </children>
+            </Pane>
+            <Pane fx:id="pane3" layoutX="721.0" layoutY="14.0" prefHeight="166.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="image3" fitHeight="98.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="label9" layoutX="35.0" layoutY="134.0" prefHeight="18.0" prefWidth="120.0" />
+                  <Label fx:id="label3" layoutX="35.0" layoutY="98.0" prefHeight="18.0" prefWidth="120.0" />
+               </children>
+            </Pane>
+            <Pane fx:id="pane6" layoutX="721.0" layoutY="254.0" prefHeight="166.0" prefWidth="200.0">
+               <children>
+                  <Label fx:id="label12" layoutX="35.0" layoutY="134.0" prefHeight="18.0" prefWidth="132.0" />
+                  <Label fx:id="label6" layoutX="35.0" layoutY="98.0" prefHeight="18.0" prefWidth="132.0" />
+                  <ImageView fx:id="image6" fitHeight="98.0" fitWidth="200.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </Pane>
+            <Button fx:id="button5" layoutX="485.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
+            <Button fx:id="button6" layoutX="786.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
+            <Button fx:id="button1" layoutX="158.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
+            <Button fx:id="button3" layoutX="786.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
+            <Button fx:id="button2" layoutX="477.0" layoutY="186.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
+            <Button fx:id="button4" layoutX="158.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
          </children></AnchorPane>
    </children>
 </VBox>
