--- a/src/gui/Store.fxml
+++ b/src/gui/Store.fxml
@@ -154,12 +154,12 @@
                   <ImageView fx:id="image6" fitHeight="98.0" fitWidth="200.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
-            <Button fx:id="button5" layoutX="485.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
-            <Button fx:id="button6" layoutX="786.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
-            <Button fx:id="button1" layoutX="158.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
-            <Button fx:id="button3" layoutX="786.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
-            <Button fx:id="button2" layoutX="477.0" layoutY="186.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
-            <Button fx:id="button4" layoutX="158.0" layoutY="422.0" mnemonicParsing="false" onMouseClicked="#detail" text="detail" />
+            <Button fx:id="button5" layoutX="485.0" layoutY="422.0" mnemonicParsing="false" onAction="#detail5" text="detail" />
+            <Button fx:id="button6" layoutX="786.0" layoutY="422.0" mnemonicParsing="false" onAction="#detail6" text="detail" />
+            <Button fx:id="button1" layoutX="158.0" layoutY="187.0" mnemonicParsing="false" onAction="#detail1" text="detail" />
+            <Button fx:id="button3" layoutX="786.0" layoutY="187.0" mnemonicParsing="false" onAction="#detail3" text="detail" />
+            <Button fx:id="button2" layoutX="477.0" layoutY="186.0" mnemonicParsing="false" onAction="#detail2" text="detail" />
+            <Button fx:id="button4" layoutX="158.0" layoutY="422.0" mnemonicParsing="false" onAction="#detail4" text="detail" />
          </children></AnchorPane>
    </children>
 </VBox>
