--- a/src/gui/RubriqueProduits.fxml
+++ b/src/gui/RubriqueProduits.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.controlsfx.control.Rating?>
 
 <VBox fx:id="parent" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="1025.0" styleClass="main" stylesheets="@css/rubriqueproduits.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.RubriqueProduitsController">
    <children>
@@ -145,6 +146,8 @@
                   <Font size="25.0" />
                </font>
             </Text>
+            <Rating fx:id="rating" layoutX="168.0" layoutY="463.0" prefHeight="32.0" prefWidth="197.0" />
+            <Label fx:id="msg" layoutX="360.0" layoutY="469.0" prefHeight="21.0" prefWidth="167.0" />
          </children>
       </AnchorPane>
    </children>
