--- a/src/gui/ajouterCategorieAdmin.fxml
+++ b/src/gui/ajouterCategorieAdmin.fxml
@@ -189,24 +189,24 @@
                         <Font name="Berlin Sans FB Demi Bold" size="25.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="nomCat" layoutX="165.0" layoutY="110.0" prefHeight="25.0" prefWidth="316.0" />
-                  <TextField fx:id="typeCat" layoutX="164.0" layoutY="195.0" prefHeight="25.0" prefWidth="316.0" />
+                  <TextField fx:id="nomCat" layoutX="165.0" layoutY="110.0" prefHeight="35.0" prefWidth="316.0" promptText="Inserer Nom CATEGORIE" />
+                  <TextField fx:id="typeCat" layoutX="164.0" layoutY="209.0" prefHeight="35.0" prefWidth="316.0" promptText="Inserer type CATEGORIE" />
                   <Button layoutX="213.0" layoutY="283.0" mnemonicParsing="false" onAction="#AjouterCategorie" prefHeight="44.0" prefWidth="214.0" style="-fx-background-color: #00A2d3;" text="Ajouter" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Button>
-                  <Label layoutX="17.0" layoutY="109.0" text="Nom Catégorie">
+                  <Label layoutX="17.0" layoutY="114.0" text="Nom Catégorie :">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="17.0" layoutY="194.0" text="Type Catégorie">
+                  <Label layoutX="17.0" layoutY="215.0" text="Type Catégorie :">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="21.0" layoutY="22.0" prefHeight="35.0" prefWidth="278.0" text="Ajouter Catégorie">
+                  <Label layoutX="21.0" layoutY="22.0" prefHeight="35.0" prefWidth="278.0" text="Ajouter Catégorie :" textOverrun="WORD_ELLIPSIS" underline="true">
                      <font>
                         <Font name="Bell MT Bold" size="28.0" />
                      </font>
