--- a/src/gui/RubriqueProduits.fxml
+++ b/src/gui/RubriqueProduits.fxml
@@ -148,6 +148,11 @@
             </Text>
             <Rating fx:id="rating" layoutX="168.0" layoutY="463.0" prefHeight="32.0" prefWidth="197.0" />
             <Label fx:id="msg" layoutX="360.0" layoutY="469.0" prefHeight="21.0" prefWidth="167.0" />
+            <Label fx:id="vote" layoutX="183.0" layoutY="77.0" prefHeight="21.0" prefWidth="140.0" textAlignment="CENTER">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
